one-host-multiple-paths-services/SFhttpd-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: app2
          image: httpd:alpine # Replace with your desired image
          ports:
            - containerPort: 80
