one-host-multiple-paths-services/SFtrs-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
        - name: app3
          # image: ajmalkhanbangash/tr_system:0.0 # Replace with your desired image
          # image: ajmalkhanbangash/portfolio_backend:0.0.2
          image: nginx
          ports:
            - containerPort: 80
